--- a/index.Rmd
+++ b/index.Rmd
@@ -18,7 +18,7 @@ load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
 library(knitr)
 library(wolfr)
 opts_chunk$set(fig.width=6, fig.align = "center", 
-      out.width = "70%", warning=FALSE, message=FALSE)
+               out.width = "70%", warning=FALSE, message=FALSE)
 library(ggplot2)
 library(grid)
 library(stringr)
@@ -43,17 +43,18 @@ library(stringr)
 2.3&nbsp; [Generating Objects](generate.vectors.html)  
 2.4&nbsp; [Subsetting](subset.html)  
 2.5&nbsp; [Random Numbers](random.numbers.html)  
-2.6&nbsp; [Writing Functions, Programming](write.functions.html)  
-2.7&nbsp; [Object-Oriented Programming](object.oriented.Rmd)  
-2.8&nbsp; [Vector Arithmetic, Linear Algebra](vector.arithmetic.html)   
-2.9&nbsp; [Character Manipulation](character.html)  
-2.10 [Data Input/Output, Transfering R Objects](io.html)   
-2.11 [Graphs](graphs.html)  
-2.12 [Model Notation](model.notation.html)  
-2.13 [Numerical Methods](numerical.methods.html)  
-2.14 [Environments, Libraries](environments.html)    
-2.15 [Customizing R: .First, .Rprofile, Dropbox](customization.html)  
-2.16 [List of Important base R Commands](important.commands.html)
+2.6&nbsp; [Writing Functions](writing.functions.html)  
+2.7&nbsp; [Programming](programming.html)  
+2.8&nbsp; [Object-Oriented Programming](object.oriented.html)  
+2.9&nbsp; [Vector Arithmetic, Linear Algebra](vector.arithmetic.html)   
+2.10 [Working with Characters](character.html)  
+2.11 [Data Input/Output, Transfering R Objects](io.html)   
+2.12 [Graphs](graphs.html)  
+2.13 [Model Notation](model.notation.html)  
+2.14 [Numerical Methods](numerical.methods.html)  
+2.15 [Environments, Libraries](environments.html)    
+2.16 [Customizing R: .First, .Rprofile, Dropbox](customization.html)  
+2.17 [List of Important base R Commands](important.commands.html)
 
 #3  Extending R, Packages
 
@@ -62,7 +63,7 @@ library(stringr)
 3.3&nbsp; [Parallel and gpu Computing](parallel.html)  
 3.4&nbsp; [Input/Output Revisited](io1.hmtl)  
 3.5&nbsp; [The pipe, dplyr, tibbles, tidyverse](pipe.html)  
-3.6&nbsp; [Character Manipulation with strngr](character1.html)  
+3.6&nbsp; [Characters with strngr](character1.html)  
 3.7&nbsp; [Dates with lubridate](dates.html)  
 3.8&nbsp; [Factors with forcats](forcats.html)  
 3.9&nbsp; [Iteration with purrr](purrr.html)  
@@ -72,11 +73,12 @@ library(stringr)
 
 #4  Statistics with R
 
-4.1  [Estimation](estimation.html)  
-4.2  [The Bootstrap](bootstrap.html)  
-4.3  [Curve Fitting / Regression](curve.fitting.html)  
-4.4  [Classification](classification.html)  
-4.5  [Bayesian Analysis](bayes.html)  
-4.6  ??
+4.1  [Basic Statistics](basic.stats.html)  
+4.2  [Estimation](estimation.html)  
+4.3  [The Bootstrap](bootstrap.html)  
+4.4  [Curve Fitting / Regression](curve.fitting.html)  
+4.5  [Classification](classification.html)  
+4.6  [Bayesian Analysis](bayes.html)  
+4.7  ??
 
 
