--- a/graphs.Rmd
+++ b/graphs.Rmd
@@ -239,10 +239,30 @@ plot(hp, mpg,
      xlab = "Horsepower", 
      ylab = "Miles per Gallon",
      col = cols, pch = 20)
-legend(250, 33, paste(2*2:4, "Cylinders"),
-       pch = rep(20, 3), 
+legend(250, 33, paste(c(4, 6, 8), "Cylinders"),
+       pch = 20, 
        col = c("blue", "green", "red"))
 ```
+
+Let's add the least squares regression lines for each cylinder separately. We could use the *abline(fit)* command, but notice that the hp ranges for the three cylinder types are quite different. Using abline would draw the fit all the way across the graph. Here is a better solution: 
+
+```{r message=FALSE}
+cls <- c("blue", "green", "red")
+plot(hp, mpg, 
+     xlab = "Horsepower", 
+     ylab = "Miles per Gallon",
+     col = cols, pch = 20)
+legend(250, 33, paste(c(4, 6, 8), "Cylinders"),
+       pch = 20, 
+       col = cls)
+for(i in c(4, 6, 8)) {
+  fit <- lm(mpg[cyl==i]~hp[cyl==i])
+  x <- range(hp[cyl==i])
+  y <- coef(fit)[1] + coef(fit)[2]*x
+  segments(x[1], y[1], x[2], y[2], col=cls[(i-2)/2])
+}
+```
+
 
 #Multiple Graphs
 
@@ -280,7 +300,24 @@ boxplot(mpg, axes = FALSE)
 
 When I write a paper or a talk or anything else that requires some graphs I always write a routine *plot.mytalk*, which has everything to recreate every graph. This is a great way to not only make changes if necessary but also to remind myself what I did back years ago when I wrote it.
 
-Caveat: these days R Markdown can be used for the same purpose.
+So I might have the following function to do the graph above:
+
+
+```{r eval=FALSE}
+figure1 <- function() {
+  layout(matrix(c(2, 0, 1, 3), 2, 2, 
+                byrow = TRUE), 
+         c(3, 1), c(1, 3), TRUE)
+  par(mar = c(3, 3, 1, 1))
+  plot(hp, mpg)
+  par(mar = c(0, 3, 1, 1))
+  boxplot(hp, axes = FALSE, horizontal = TRUE)
+  par(mar = c(3, 0, 1, 1))
+  boxplot(mpg, axes = FALSE)
+  
+}  
+```
+
 
 #Graphs that don't look like Graphs
 
@@ -334,7 +371,7 @@ map("usa")
 text(-87.623177, 41.881832, "Chicago", cex=1.3)
 ```
 
-People have done some very funny things with this. Run this code in the console:
+People have done some very funny things with this. Run this code in the console (you need to install the library *cowsay* first)
 
 ```{r eval=FALSE}
 library(cowsay)
